--- a/.github/workflows/cy.yaml
+++ b/.github/workflows/cy.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version-file: .tool-versions
+          go-version: '1.23.10'
           check-latest: true
 
       - name: Install dependencies
