🔧 (chore): Update test command in CI workflow to target specific test directory
- Modified the test command in the GitHub Actions workflow to run tests from the ./tests/ directory instead of the entire project.

--- a/.github/workflows/cy.yaml
+++ b/.github/workflows/cy.yaml
@@ -24,7 +24,7 @@ jobs:
         run: go mod tidy
 
       - name: Run tests
-        run: go test ./...
+        run: go test ./tests/...
 
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v3
