--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: v2.1.6
     hooks:
       - id: golangci-lint
+        entry: golangci-lint run
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
