--- a/.github/workflows/cy.yaml
+++ b/.github/workflows/cy.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: latest
+          version: v1.55.2
 
       - name: Run pre-commit hooks
         uses: pre-commit/action@v3.0.0
