🔧 (chore): Upgrade golangci-lint action and version in CI workflow
- Updated golangci-lint action from v3.7.0 to v8 for enhanced functionality.
- Changed golangci-lint version from v1.64.0 to latest to ensure the most up-to-date linting features.

--- a/.github/workflows/cy.yaml
+++ b/.github/workflows/cy.yaml
@@ -27,9 +27,9 @@ jobs:
         run: go test ./tests/...
 
       - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v3.7.0
+        uses: golangci/golangci-lint-action@v8
         with:
-          version: v1.64.0
+          version: latest
 
       - name: Run pre-commit hooks
         uses: pre-commit/action@v3.0.0
