🔧 (chore): Update Makefile and add README with project details
- Removed installation commands for dependencies from the Makefile.
- Added a README.md file outlining project structure, usage instructions, and integration with Jaeger for tracing.
- Included images for Go and Jaeger in the assets directory.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,5 +9,8 @@ repos:
     rev: v4.5.0
     hooks:
       - id: trailing-whitespace
+        exclude: ^assets/
       - id: end-of-file-fixer
+        exclude: ^assets/
       - id: check-added-large-files
+        exclude: ^assets/
